deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-demo-Deployment
  namespace: nginx-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-demo
  template:
    metadata:
      labels:
        app: nginx-demo
    spec:
      containers:
      - name: nginx-demo
        image: nginx:latest
        ports:
        - name: web
          containerPort: 80
