service.yml
apiVersion: apps/v1
kind: Service
metadata:
  name: nginx-demo-service
  namespace: nginx-demo
  labels:
    app: nginx-demo
  spec:
    type: ClusterIP
    ports:
    - port: 80
      name: http
    selector:
      app: nginx-demo
